[package]
name = "cf-cache-buster-bot"
authors = ["Nicklas Vedsted"]
version = "0.1.0"
edition = "2021"

[dependencies.serenity]
version = "0.11.1"

[dependencies]
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.18.0", features = ["rt", "macros"] }
serde = { version = "1.0.136" }
serde_json = "1.0.79"
env_logger = "0.9.0"
log = "0.4.16"
